--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "node-sass": "^9.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-inspector": "^6.0.2"
+    "react-inspector": "^6.0.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^13.13.30",
     "@types/react": "^17.0.74",
     "@types/react-dom": "^18.2.18",
-    "base64-inline-loader": "^2.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
@@ -41,7 +41,8 @@
     "compile": "npx webpack",
     "compile:dev": "npx webpack --mode=development",
     "install-dependencies": "npm install && cd PublishHtmlReport && npm install && cd ..",
-    "package": "npm run compile && npx tfx-cli extension create --rev-version --json5 --output-path bin"
+    "package": "npm run compile && npx tfx-cli extension create --rev-version --json5 --output-path bin",
+    "publish": "npm run compile && npx tfx-cli extension publish --rev-version --json5 --manifest-globs vss-extension.json src/extensions/**/*.json --output-path bin --token %ADO_MARKETPLACE_PATH%"
   },
   "eslintConfig": {
     "extends": "react-app"
