--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist ./bin",
     "precompile": "npm run clean",
-    "compile": "npx webpack",
+    "compile": "npx webpack && tsc ./PublishHtmlReport/index.ts",
     "compile:dev": "npx webpack --mode=development",
     "install-dependencies": "npm install && cd PublishHtmlReport && npm install && cd ..",
     "package": "npm run compile && npx tfx-cli extension create --rev-version --json5 --output-path bin",
