end of day commit

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "azure-devops-extension-sdk": "^2.0.11",
     "azure-devops-ui": "^2.165.1",
     "dashify": "^2.0.0",
+    "jszip": "^3.10.1",
     "material-table": "^1.60.0",
     "mustache": "^3.0.1",
     "node-fetch": "^2.6.1",
@@ -38,7 +39,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist ./bin",
     "precompile": "npm run clean",
-    "compile": "npx webpack && tsc ./PublishHtmlReport/index.ts",
+    "compile": "npx webpack && cd ./PublishHtmlReport/ && tsc",
     "compile:dev": "npx webpack --mode=development",
     "install-dependencies": "npm install && cd PublishHtmlReport && npm install && cd ..",
     "package": "npm run compile && npx tfx-cli extension create --rev-version --json5 --output-path bin",
