--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^13.13.30",
     "@types/react": "^17.0.74",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
