--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "azure-pipelines-html-report",
   "version": "0.0.1",
   "private": true,
-  "author": "Niels Ebbelink",
+  "author": "Mr Ebbelink",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./dist ./bin",
